--- a/van-trees_book/_toc.yml
+++ b/van-trees_book/_toc.yml
@@ -4,6 +4,5 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: notebooks/trees_analysis
+- file: notebooks/trees_EDA
