--- a/van-trees_book/_toc.yml
+++ b/van-trees_book/_toc.yml
@@ -8,6 +8,7 @@ parts:
     chapters:
     - file: notebooks/trees_EDA
   - caption: Data Analysis
+    chapters:
     - file: docs/analysis_intro
     - file: notebooks/trees_analysis
 
